Use github.io for pages.

--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -11,7 +11,7 @@
   <version>${version}</version>
   <packaging>jar</packaging>
   <name>${artifactId}</name>
-  <url>http://stefanbirkner.github.com/${artifactId}/</url>
+  <url>http://stefanbirkner.github.io/${artifactId}/</url>
   <inceptionYear>2013</inceptionYear>
   <licenses>
     <license>
