--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,6 @@
 
   <groupId>com.github.stefanbirkner</groupId>
   <artifactId>sfb-github-lib-archetype</artifactId>
-  <version>0.2-SNAPSHOT</version>
+  <version>0.2</version>
   <packaging>jar</packaging>
 </project>
