--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -64,6 +64,7 @@
         <configuration>
           <nexusUrl>https://oss.sonatype.org/</nexusUrl>
           <serverId>sonatype-nexus-staging</serverId>
+          <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
       </plugin>
     </plugins>
