--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.stefanbirkner</groupId>
     <artifactId>sfb-github-lib-archetype</artifactId>
-    <version>0.8</version>
+    <version>0.9-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
 
     <build>
