--- a/src/main/resources/archetype-resources/.travis.yml
+++ b/src/main/resources/archetype-resources/.travis.yml
@@ -1,7 +1,8 @@
 language: java
-install: mvn -DskipTests=true -Dgpg.skip=true install javadoc:javadoc
+install: mvn -DskipTests=true -Dgpg.skip install
 jdk:
     - oraclejdk8
     - oraclejdk7
     - openjdk7
     - openjdk6
+script: mvn test javadoc:javadoc
