--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.stefanbirkner</groupId>
     <artifactId>sfb-github-lib-archetype</artifactId>
-    <version>0.10</version>
+    <version>0.11-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
 
     <build>
