--- a/src/main/resources/archetype-resources/.travis.yml
+++ b/src/main/resources/archetype-resources/.travis.yml
@@ -1,8 +1,4 @@
 language: java
 install: mvn -DskipTests=true -Dgpg.skip install
-jdk:
-    - oraclejdk8
-    - oraclejdk7
-    - openjdk7
-    - openjdk6
+jdk: oraclejdk8
 script: mvn test javadoc:javadoc
