--- a/src/main/resources/archetype-resources/.travis.yml
+++ b/src/main/resources/archetype-resources/.travis.yml
@@ -1,4 +1,4 @@
 language: java
-install: mvn -DskipTests=true -Dgpg.skip install
+install: mvn -DskipTests -Dgpg.skip install
 jdk: oraclejdk8
 script: mvn test javadoc:javadoc
